# AI-for-Business-Prognosis-S-ARIMA-X-

./: README.md  pyproject.toml
KlassischeMethode_S_ARIMA_X/: S_ARIMA_X_HandsOnÜbung_BhkwPfettscher.ipynb  S_ARIMA_X_LiveDemo.ipynb  pyproject_LiveDemo.toml
KlassischeMethode_S_ARIMA_X/BHKWs_Daten/Pfettscher/: Pfettscher.txt  Pfettscher_2022.csv  Pfettscher_2022.csv.bak  Pfettscher_2023.csv  Pfettscher_2023.csv.bak  Pfettscher_2024.csv  Pfettscher_2024.csv.bak  Pfettscher_2025.csv  Pfettscher_2025.csv.bak  Pfettscher_2026.csv  Pfettscher_2026.csv.bak
